First recipe page is finished

--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -8,5 +8,28 @@
 <body>
     <h1>Banana Bread</h1>
     <img src="../../pics/banana_bread.jpg">
+    <h3>Description</h3>
+    <p>This is a sweet bread made of mashed bananas</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>flour</li>
+        <li>baking soda</li>
+        <li>salt</li>
+        <li>butter</li>
+        <li>brown sugar</li>
+        <li>eggs</li>
+        <li>banana</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Combine the dry ingredients in one bowl</li>
+        <li>Beat the butter and sugar in another bowl. Add the eggs and mashed bananas</li>
+        <li>Add the wet mixture to the dry mixture</li>
+        <li>Pour the batter into a loaf pan and bake in a preheated oven</li>
+        <li>Bake for at least an hour</li>
+        <li>Insert a toothpick into the center of the loaf and check if it's clean</li>
+        <li>When it is clean, take it out of the oven and let it set for 10 min</li>
+        <li>Turn it out of the pan and enjoy!!!</li>
+    </ol>
 </body>
 </html>
