--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/banana_bread.html">Banana Bread</a>
+        <ul>
+            <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
+            <li><a href="recipes/lava_cake.html">Lava Cake</a></li>
+            <li><a href="recipes/cookie.html">Chocolate Chip Cookie</a></li>
+        </ul>
     </body>
 </html>
