--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -9,27 +9,28 @@
     <h1>Banana Bread</h1>
     <img src="../../pics/banana_bread.jpg">
     <h3>Description</h3>
-    <p>This is a sweet bread made of mashed bananas</p>
+    <p>This is a sweet bread with mashed bananas being the main ingredient.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>flour</li>
-        <li>baking soda</li>
-        <li>salt</li>
-        <li>butter</li>
-        <li>brown sugar</li>
-        <li>eggs</li>
-        <li>banana</li>
+        <li>2 cups all-purpose flour</li>
+        <li>1 teaspoon baking soda</li>
+        <li>¼ teaspoon salt</li>
+        <li>¾ cup brown sugar</li>
+        <li>½ cup butter</li>
+        <li>2 eggs, beaten</li>
+        <li>2 ⅓ cups mashed overripe bananas</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li>Combine the dry ingredients in one bowl</li>
-        <li>Beat the butter and sugar in another bowl. Add the eggs and mashed bananas</li>
-        <li>Add the wet mixture to the dry mixture</li>
-        <li>Pour the batter into a loaf pan and bake in a preheated oven</li>
-        <li>Bake for at least an hour</li>
-        <li>Insert a toothpick into the center of the loaf and check if it's clean</li>
-        <li>When it is clean, take it out of the oven and let it set for 10 min</li>
-        <li>Turn it out of the pan and enjoy!!!</li>
+        <li>Preheat the oven to 350 degrees F (175 degrees C)</li>
+        <li>Lightly grease a 9x5-inch loaf pan</li>
+        <li>Combine flour, baking soda, and salt in a large bowl</li>
+        <li>Beat brown sugar and butter with an electric mixer in a separate large bowl until smooth</li>
+        <li>Stir in eggs and mashed bananas until well blended</li>
+        <li>Stir banana mixture into flour mixture until just combined</li>
+        <li>Pour batter into the prepared loaf pan</li>
+        <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, about 60 minutes</li>
+        <li>Let bread cool in pan for 10 minutes, then turn out onto a wire rack to cool completely</li>
     </ol>
 </body>
 </html>
