Started Styling project with CSS.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <head>
+            <link rel="stylesheet" href="styles.css" />
+        </head>
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
-            <li><a href="recipes/lava_cake.html">Lava Cake</a></li>
-            <li><a href="recipes/cookie.html">Chocolate Chip Cookie</a></li>
-        </ul>
+        <img src="../pics/logo.jpg" alt="Logo">
+        <div class="container">
+            <ul>
+                <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
+                <li><a href="recipes/lava_cake.html">Lava Cake</a></li>
+                <li><a href="recipes/cookie.html">Chocolate Chip Cookie</a></li>
+            </ul>
+        </div>
     </body>
 </html>
