--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Banana Bread</h1>
-    <img src="../../pics/banana_bread.jpg">
+    <img src="../../pics/banana_bread.jpg" alt="banana bread">
     <h3>Description</h3>
     <p>This is a sweet bread with mashed bananas being the main ingredient.</p>
     <h3>Ingredients</h3>
