styling index page is done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         </head>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <div class="title">
+            <h1>Odin Recipes</h1>
+        </div>
         <img src="../pics/logo.jpg" alt="Logo">
         <div class="container">
             <ul>
