Added more style to the index page.

--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Bread</title>
+    <style>
+        
+    </style>
 </head>
 <body>
     <h1>Banana Bread</h1>
-    <img src="../../pics/banana_bread.jpg" alt="banana bread">
+    <img src="../../pics/banana_bread.jpg" height=250px width= 250px alt="banana bread">
     <h3>Description</h3>
     <p>This is a sweet bread with mashed bananas being the main ingredient.</p>
     <h3>Ingredients</h3>
