--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chocolate Chip Cookie</h1>
-    <img src="../../pics/cookie.jpg" alt="cookies">
+    <img src="../../pics/cookie.jpg" height=250px width=250px alt="cookies">
     <h3>Description</h3>
     <p>A small, round baked treat that is usually crispy on the outside<br>
         and chewy on the inside. It also contains chocolate chips randomly<br>
