--- a/recipes/lava_cake.html
+++ b/recipes/lava_cake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lava Cake</h1>
-    <img src="../../pics/lava_cake.jpg" alt="lava cake">
+    <img src="../../pics/lava_cake.jpg" height=250px width=250px alt="lava cake">
     <h3>Description</h3>
     <p>A chocolate sponge cake with a runny chocolate liquid in the center.</p>
     <h3>Ingredients</h3>
